<resources>
    <string name="app_name">AdminWaveOfFood</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="continue_with">Continue With</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="google">Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">1:975023305882:android:2aa887688fe07064d39b23</string>
</resources>